# osgt-qol-android

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yaml  release.yaml
mod-assets/: smali-patch.sh
src/: CMakeLists.txt  main.cpp
src/game/: events.cpp  game.cpp  game.hpp  options.cpp  signatures.cpp  signatures.hpp  weathermanager.cpp
src/game/struct/: app.hpp  baseapp.hpp  component.hpp  enetclient.hpp  entity.cpp  entity.hpp  entityutils.cpp  entityutils.hpp  gametimer.hpp  inventorymenuinfo.hpp  iteminfomanager.hpp  lockfloat.hpp  loopingsound.hpp  miscutils.cpp  miscutils.hpp  playeritems.hpp  renderutils.cpp  renderutils.hpp  resourceutils.cpp  resourceutils.hpp  rtfont.hpp  rtrect.hpp  textmanager.hpp  ubistring.hpp  variant.cpp  variant.hpp  variantdb.cpp  variantdb.hpp  vec.hpp
src/game/struct/components/: gamelogic.hpp  mapbg.hpp
src/game/struct/custom/: playmodoverlay.hpp
src/game/struct/graphics/: background.cpp  background.hpp  background_blood.cpp  background_blood.hpp  background_clouds.cpp  background_clouds.hpp  background_default.cpp  background_default.hpp  surface.cpp  surface.hpp
src/game/struct/net/: gameupdatepacket.hpp
src/game/struct/netavatar/: netavatar.hpp
src/game/struct/world/: world.hpp  worldcamera.hpp  worldrenderer.hpp
src/patch/: patch.cpp  patch.hpp
src/patch/core/: about.cpp  cache.cpp  integrity.cpp  version.cpp
src/patch/user/: chat.cpp  framerate.cpp  misc.cpp  net.cpp  playmodoverlay.cpp  render.cpp
src/utils/: utils.cpp  utils.hpp
